src/test/deca/context/valid/class_sans_method/instanciate_class.deca
// Description:
//    Un constructeur correct
//
// Resultats:
//    Context: pas d'erreur
//
// Historique:
//    cree le 20/01/2022

class A {

}

{
    A a = new A();
}
